<resources>
    <string name="app_name">따라와</string>
    <string name="station">대여소</string>
    <string name="spot">관광지</string>
    <string name="searchHint">목적지를 입력해주세요.</string>
    <string name="tourSpotRecommendation">추천</string>
    <string name="restTimeInfo">따릉이를 대여하세요.</string>
    <string name="tourSpotFab">관광지</string>
    <string name="stationFab">대여소</string>
    <string name="stationNumber">대여소 번호</string>
    <string name="stationRackNumber">거치대 수</string>
    <string name="stationAddress">주소</string>
    <string name="navigation">경로안내</string>
    <string name="rent">대여하기</string>
    <string name="tourSpotIntro">소개</string>
    <string name="tourSpotAddress">주소</string>
    <string name="tourSpotDetails">상세보기</string>
    <string name="settings">설정</string>
    <string name="alarmType">알람 방식</string>
    <string name="returnNotification">따릉이 반납 알람</string>
    <string name="beforeReturnTime">반납 시간 전</string>
    <string name="fiveminutes">5분</string>
    <string name="tenminutes">10분</string>
    <string name="twentyminutes">20분</string>
    <string name="thirtyminutes">30분</string>
    <string name="sound">소리</string>
    <string name="vibrate">진동</string>
    <string name="alertGpsOn">내 위치 정보를 사용하려면, 단말기 설정에서 \'위치 서비스\' 사용을 허용해주세요.</string>
    <string name="GPSdenied">현재위치인식승인이 거부되었습니다.</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="install">설치하기</string>
    <string name="navigationError">네비게이션 안내 오류로 다음에 이용해 주시기 바랍니다.</string>
    <string name="alertTmapInstall">T map 설치가 필요합니다.</string>
    <string name="alertSearchGPS">\'위치 서비스\' 사용을 허용하면, 검색한 목적지까지의 경로를 확인할 수 있습니다.</string>
    <string name="alertSearchFail">검색한 목적지까지는 따릉이가 아닌, 다른 이동수단을 추천합니다!</string>
    <string name="exit">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="intro">소개</string>
    <string name="hours">시간</string>
    <string name="admissions">요금</string>
    <string name="tour_hour">이용 시간</string>
    <string name="tour_adm">이용 요금</string>
    <string name="tour_attractions">관람시설</string>
    <string name="tour_adult">어른</string>
    <string name="tour_youth">청소년</string>
    <string name="tour_children">어린이</string>
    <string name="tour_addr">주소</string>
    <string name="tour_tel">전화</string>
    <string name="tour_site">사이트</string>
    <string name="tour_map">지도</string>
    <string name="tour_nav">경로안내</string>
    <string name="tour_noInfo">이용 정보 없음</string>
    <string name="tour_complete">방문완료</string>
    <string name="tour_visitCheck">방문인증</string>
    <string name="course_dosim_main">도심</string>
    <string name="course_dosim_sub">City Center</string>
    <string name="course_gogung_main">고궁</string>
    <string name="course_gogung_sub">Palace Quarter</string>
    <string name="course_dongdae_main"><![CDATA[동대문&대학로]]></string>
    <string name="course_dongdae_sub"><![CDATA[Dongdaemun&Around]]></string>
    <string name="course_yeouido_main">여의도</string>
    <string name="course_yeouido_sub">Yeouido</string>
    <string name="course_sangam_main">상암</string>
    <string name="course_sangam_sub">sangam</string>
    <string name="tour_recom">추천 관광 명소</string>
    <string name="spot_deoksu">덕수궁 돌담길</string>
    <string name="spot_myeongdong">명동</string>
    <string name="spot_namsangol">남산골 한옥마을</string>
    <string name="spot_sungnyemun">숭례문</string>
    <string name="spot_namsanpark">남산 공원</string>
    <string name="spot_nseoul">N 서울타워</string>
    <string name="spot_insadong">인사동</string>
    <string name="spot_changdeokgung">창덕궁과 후원</string>
    <string name="spot_changgyeong">창경궁</string>
    <string name="spot_bukchon">북촌 한옥마을</string>
    <string name="spot_heunginjimun">흥인지문</string>
    <string name="spot_dongfashion">동대문 패션타운</string>
    <string name="spot_daehakro">대학로</string>
    <string name="spot_marronnier">마로니에 공원</string>
    <string name="spot_naksan">낙산 공원</string>
    <string name="spot_63square">63스퀘어</string>
    <string name="spot_yeouido">여의도 공원</string>
    <string name="spot_mbc">MBC 월드 방송 테마 파크</string>
    <string name="spot_pyeongwha">평화의 공원</string>
    <string name="spot_skypark">하늘 공원</string>
    <string name="spot_gyeongbok">경복궁</string>
    <string name="spot_gwanghwamun">광화문 광장</string>
    <string name="spot_jongmyo">종묘</string>
    <string name="spot_bosingak">보신각 터</string>
    <string name="spot_ssamzie">쌈지길</string>
    <string name="hours_hours">관람 시간</string>
    <string name="hours_finalAdmission">입장 마감</string>
    <string name="hours_1_2">1월~2월</string>
    <string name="hours_3_5">3월~5월</string>
    <string name="hours_6_8">6월~8월</string>
    <string name="hours_9_10">9월~10월</string>
    <string name="hours_11_12">11월~12월</string>
    <string name="hours_months">관람 기간</string>
    <string name="gyeong_individual">개인</string>
    <string name="gyeong_daeIn">대인</string>
    <string name="gyeong_local">(내국인)</string>
    <string name="gyeong_age">(만25세~만64세)</string>
    <string name="gyeong_3000">3,000원</string>
    <string name="gyeong_2450">2,450원</string>
    <string name="gyeong_group">단체</string>
    <string name="gyeong_daein10">대인(10인이상)</string>
    <string name="gyeong_below_daein10">※ 무료대상자 제외</string>
    <string name="gyeong_bigo">비고</string>
    <string name="gyeong_bigo1">\t※ 무료관람에 해당되시는 분은 신분증</string>
    <string name="gyeong_bigo2">\t\t을 매표소에 제시한 후 무료입장권을</string>
    <string name="gyeong_bigo3">\t\t발권받아 입장하시면 됩니다.</string>
    <string name="gyeong_bigo4">\t\t- 만 24세 이하 청소년</string>
    <string name="gyeong_bigo5">\t\t- 만 65세 이상 어르신</string>
    <string name="square_hours">매일 10:00~22:00</string>
    <string name="square_notes">21:30까지 입장가능</string>
    <string name="square_art">63아트</string>
    <string name="square_aqua">아쿠아플라넷</string>
    <string name="square_13000">13,000원</string>
    <string name="square_12000">12,000원</string>
    <string name="square_11000">11,000원</string>
    <string name="square_25000">25,000원</string>
    <string name="square_23000">23,000원</string>
    <string name="square_21000">21,000원</string>
    <string name="square_bigo1">※ 어른 : 만 19세 이상</string>
    <string name="square_bigo2">※ 청소년 : 만 13세 이상 ~ 만 18세 이하</string>
    <string name="square_bigo3">※ 어린이 : 36개월 이상 ~ 만 12세 이하</string>
    <string name="sky_jan">1월</string>
    <string name="sky_feb">2월</string>
    <string name="sky_mar">3월</string>
    <string name="sky_apr">4월</string>
    <string name="sky_may">5월</string>
    <string name="sky_jun">6월</string>
    <string name="sky_jul">7월</string>
    <string name="sky_aug">8월</string>
    <string name="sky_sep">9월</string>
    <string name="sky_oct">10월</string>
    <string name="sky_nov">11월</string>
    <string name="sky_dec">12월</string>
    <string name="sky_sunset">일몰적용시간</string>
    <string name="sky_parkcontrol">공원통제시간</string>
    <string name="sky_gubun">구분</string>
    <string name="sky_notes">통제시간 30분 전까지 입장 가능</string>
    <string name="mbc_session">구분</string>
    <string name="mbc_1">1회차</string>
    <string name="mbc_2">2회차</string>
    <string name="mbc_3">3회차</string>
    <string name="mbc_4">4회차</string>
    <string name="mbc_5">5회차</string>
    <string name="mbc_6">6회차</string>
    <string name="mbc_7">7회차</string>
    <string name="mbc_8">8회차</string>
    <string name="mbc_9">9회차</string>
    <string name="mbc_10">10회차</string>
    <string name="mbc_11">11회차</string>
    <string name="mbc_starthour">시작시간</string>
    <string name="mbc_bigo1">- 10:00~18:00 연중무휴 운영</string>
    <string name="mbc_bigo2">(단, 설날/추석 당일은 휴관)</string>
    <string name="mbc_bigo3">- 운영종료 2시간 전(16:00)까지만 입장 가능</string>
    <string name="mbc_bigo4">- 하루 11회 투어 운영, 1회 투어 소요시간은 90분</string>
    <string name="mbc_admission">입장료</string>
    <string name="mbc_individual">개인</string>
    <string name="mbc_18000">18,000원</string>
    <string name="mbc_13000">13,000원</string>
    <string name="mbc_9000">9,000원</string>
    <string name="mbc_child">※ 어린이: 36개월 이상~초등학교 6학년생</string>
    <string name="mbc_youth">※ 청소년 : 중고등학생</string>
    <string name="mbc_discounts">요금사항 할인 혜택</string>
    <string name="mbc_discounts1">- 대상: 장애인, 국가보훈자, 경로, 군경찰</string>
    <string name="mbc_discounts2">- 할인 내용: 입장료 13,000원</string>
    <string name="mbc_discounts3">※ 확인 가능한 관련 증빙 서류 지참</string>
    <string name="namsangol_free">무료</string>
    <string name="namsangol_openingHanok">한옥 관람시간</string>
    <string name="namsangol_summer">하절기(4월~10월)</string>
    <string name="namsangol_winter">동절기(11월~3월)</string>
    <string name="namsangol_notes">매주 화요일 휴관</string>
    <string name="namsangol_openingGarden">전통정원 개방시간</string>
    <string name="namsangol_walk">산책 및 이용</string>
    <string name="namsangol_reardoor">후문 주민 통로 이용</string>
    <string name="namsangol_overnight">05:00~익일01:00</string>
    <string name="namsangol_restrict">01:00~05:00 입장 및 통행 제한</string>
    <string name="nampark_facility">시설명</string>
    <string name="nampark_cablecar">남산 케이블카</string>
    <string name="nampark_type">(종별)</string>
    <string name="nampark_oneway">편도</string>
    <string name="nampark_roundtrip">왕복</string>
    <string name="nampark_hours">운행시간</string>
    <string name="nampark_rates">이용요금</string>
    <string name="nampark_indi_group">개별/(단체)</string>
    <string name="nampark_adult">대인</string>
    <string name="nampark_child">소인</string>
    <string name="nampark_6000">6,000원</string>
    <string name="nampark_5000">(5,000원)</string>
    <string name="nampark_3500">3,500원</string>
    <string name="nampark_3000">(3,000원)</string>
    <string name="nampark_8500">8,500원</string>
    <string name="nampark_5500">5,500원</string>
    <string name="nampark_7000">(7,000원)</string>
    <string name="nampark_4500">(4,500원)</string>
    <string name="nampark_bigo">단체 30인 이상</string>
    <string name="nseoul_gubun">구분</string>
    <string name="nseoul_observatory">전망대</string>
    <string name="nseoul_10000">10,000원</string>
    <string name="nseoul_8000">8,000원</string>
    <string name="nseoul_adult">대인 : 만 13세 이상</string>
    <string name="nseoul_child">소인 : 만 3세~ 만 12세</string>
    <string name="nseoul_senior">경로 : 소인 요금과 동일</string>
    <string name="nseoul_sat">토요일</string>
    <string name="nseoul_week">월요일~금요일/일요일</string>
    <string name="ssamzie_hours">영업 시간</string>
    <string name="ssamzie_everyday">매일 10:30~20:30</string>
    <string name="ssamzie_closed">공휴일 휴무 설날 / 추석 당일</string>
    <string name="jongmyo_guidedtour">시간제 관람</string>
    <string name="jongmyo_guideMon">17:00(3월~9월) / 17:20(6월~8월)</string>
    <string name="jongmyo_bigo">문화재해설사와 함께하는 관람 실시</string>
    <string name="jongmyo_selfguide">자유 관람</string>
    <string name="jongmyo_ticketing">매표 시간</string>
    <string name="jongmyo_observ">관람 시간</string>
    <string name="jongmyo_2_5">2월~5월</string>
    <string name="jongmyo_9_10">/ 9월~10월</string>
    <string name="jongmyo_6_8">6월~8월</string>
    <string name="jongmyo_11_1">11월~1월</string>
    <string name="jongmyo_target">대상</string>
    <string name="jongmyo_admissions">관람 요금</string>
    <string name="jongmyo_2564">만 25세~64세(내국인)</string>
    <string name="jongmyo_19">만 19세 이상 외국인</string>
    <string name="jongmyo_1000">1,000원</string>
    <string name="changdeok_2564">(만 25세~만 64세)</string>
    <string name="changdeok_24">(만 24세 이하)</string>
    <string name="changdeok_youth">소인</string>
    <string name="changdeok_youthFare">무료(외국인 제외)</string>
    <string name="changdeok_group">단체</string>
    <string name="changdeok_group10">(10명 이상)</string>
    <string name="changdeok_group1">무료 대상자를 제외한 10명</string>
    <string name="changdeok_group2">이상일 경우 요금 22.5% 할인</string>
    <string name="changdeok_free">무료</string>
    <string name="changdeok_bigo1">※ 무료 관람 대상자는</string>
    <string name="changdeok_bigo2">신분증 제시</string>
    <string name="changdeok_bigo3">- 만 24세 이하 청소년</string>
    <string name="changdeok_bigo4">- 만 65세 이상 어르신</string>
</resources>