<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:fillViewport="false"
        android:visibility="visible">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="25dp"
                android:gravity="top"
                android:paddingLeft="17dp"
                android:text="@string/tour_adm"
                android:textColor="@color/maincolor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!--주요시설 표-->
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">


                <!--1열(시설명)-->
                <TableRow android:weightSum="10.5">

                    <TextView
                        android:layout_weight="3"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/celltitle"
                        android:gravity="center"
                        android:text="@string/tour_attractions"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/celltitle"
                        android:gravity="center"
                        android:text="@string/tour_adult"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/celltitle"
                        android:gravity="center"
                        android:text="@string/tour_youth"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/celltitle"
                        android:gravity="center"
                        android:text="@string/tour_children"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:weightSum="10.5">

                    <TextView
                        android:layout_weight="3"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_art"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_13000"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_12000"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_11000"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:weightSum="10.5">

                    <TextView
                        android:layout_weight="3"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_aqua"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_25000"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_23000"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="2.5"
                        android:width="0px"
                        android:height="45dp"
                        android:background="@drawable/cellbg"
                        android:gravity="center"
                        android:text="@string/square_21000"
                        android:textColor="@color/tablecolor"
                        android:textSize="16sp" />
                </TableRow>
                <TextView
                    android:layout_weight="15"
                    android:width="0px"
                    android:height="45dp"
                    android:background="@drawable/celltitle"
                    android:gravity="center"
                    android:text="@string/gyeong_bigo"
                    android:textColor="@color/tablecolor"
                    android:textSize="16sp" />

                <TextView
                    android:layout_weight="15"
                    android:width="0px"
                    android:height="45dp"
                    android:paddingLeft="25dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/cellbg_top"
                    android:text="@string/square_bigo1"
                    android:textColor="@color/tablecolor"
                    android:textSize="16sp" />

                <TextView
                    android:paddingLeft="25dp"
                    android:gravity="center_vertical"
                    android:layout_weight="15"
                    android:width="0px"
                    android:height="45dp"
                    android:background="@drawable/cellbg_center"
                    android:text="@string/square_bigo2"
                    android:textColor="@color/tablecolor"
                    android:textSize="16sp" />

                <TextView
                    android:paddingLeft="25dp"
                    android:gravity="center_vertical"
                    android:layout_weight="15"
                    android:width="0px"
                    android:height="45dp"
                    android:background="@drawable/cellbg_btm"
                    android:text="@string/square_bigo3"
                    android:textColor="@color/tablecolor"
                    android:textSize="16sp" />



            </TableLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>